 - demo: added <meta http-equiv="Cache-Control" content="no-cache" /> to the html header for all pages on the site, due to aggressive caching by appengine

 1.0rc3
 - cache clean fixed. It wasn't working
 - renamed appengine_utilities/django to appengine_utilities/django-middleware, solving a conflict with importing django for the flash fix
 - modified flash to use json instead of pickle for serializing data

 1.0rc4
 - flash: wrapped the simplejson.loads() in a try/except to handle when the json sent by the browser does not validate.
 1.0
 No changes, 1.0rc4 renamed to 1.0

 1.1
 - cron: added
 admin interface: a small piece added for cron, will be expanded to support all utilities where applicable

 1.1.1
 - session and flash: added no_cache_headers() method that is called whenever either
        class is loaded. This should stop any problems with browser caching.
 - ROTModel - new Model class added that retries put operations when db.Timeout is encountered.
 - sessions and cache: Retuned the cleanup routines default settings. It will happen more often, but will delete less instances, lowering the amount of time required to run the operation in an effort to avoid deadline exceded errors in applications.
 - session - uses the new ROTModel for both session and session data.
 - session - rewrote the Cookie handling process to work better with other applications that use the cookies in applications, Google Analytics for example.
 - cron - Fixed a bug in the form for deleting cron entries.
 - Project - The 1.1 branch is now the suggested branch to use, 1.0 is being deprecated.
 
 1.1.2
 - session: Added last_activity_update variable to set an interval for which last_activity needs to be updated. It defaults to 60 seconds. This means a put is not required every request which should increase performance.
 - session: Refactored based on a contribution from Jeremy Awon optimizing the class initialization.