@@ -101,3 +101,6 @@ Changelog
  1.1.2
  - session: Added last_activity_update variable to set an interval for which last_activity needs to be updated. It defaults to 60 seconds. This means a put is not required every request which should increase performance.
  - session: Refactored based on a contribution from Jeremy Awon optimizing the class initialization.
+ - session: Bug found in the process to clear old sessions that was deleting data it shouldn't be. This was the cause of the mysterious missing session data bug. Thank you pant.lalit 
+ - session: Bug fixed where clean_check_percent was being ignored.
+ - session: Some tweaks done to delete_all_session(), though this feature shouldn't be considered complete yet. Needs more testing.
